[tool.poetry]
name = "repl_python3_Text-Based-Adventure"
version = "0.1.0"
description = ""
authors = ["kurdonthego <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
